<resources>
    <string name="app_name">Billaway Rewards Program</string>
    <string name="enter_the_coupon_code">Enter the coupon code</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="my_brands">My Brands</string>
    <string name="redeem">Redeem</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="security_pin_number">Security PIN number*</string>
    <string name="enter">Enter</string>
    <string name="days_left">days left</string>
    <string name="remaining">remaining</string>
    <string name="projected">projected</string>
    <string name="brands">My Brands</string>
    <string name="question_redeem_volume">How many MBs do you want to redeem?</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="coupon_code_submit_progress_header">Processing coupon code</string>
    <string name="coupon_code_submit_progress_message">Please wait while process completes.</string>
    <string name="invalid_coupon_code_message">Invalid coupon code.</string>
    <string name="ok">OK</string>
    <string name="error_submitting_coupon_code_generic_message">Failed to process coupon code.</string>
    <string name="submiting_details">Submiting Details</string>
    <string name="please_wait_while_process_completes">Please wait while process completes</string>
    <string name="phone_number_submit_error">Couldn\'t complete the request.</string>
    <string name="try_again">Try Again</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="will_be_remaining">will be remaining</string>
    <string name="confirm_redeem_message">Are you sure re you sure you want to Redeem %d MB Credits ?</string>
    <string name="cancel">Cancel</string>
    <string name="redeem_successful">Redeem Successful</string>
    <string name="failed_to_redeem_data">Failed to redeem data</string>
    <string name="use_data">Use Data</string>
    <string name="confirm_use_data">Your %d MB of free mobile data is in use and will not count against your wireless data plan.</string>
    <string name="failed_to_use_data">Failed to use data</string>
    <string name="add_data_successful">Successfully added data to use.</string>
    <string name="question_use_data_volume">How many MBs do you want to use?</string>
    <string name="minimum_use_data_required">Minimum 10 MB is required</string>
    <string name="data_available">data available</string>
    <string name="data_format">%d MB</string>
    <string name="congratulations">Congratulations</string>
    <string name="coupon_code_not_available">Coupon code not available</string>
    <string name="data_credits_available">Data Credits\navailable</string>
    <string name="data_redemption">Data Redemption</string>
    <string name="data_in_use">Data in use</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="details">Details</string>
    <string name="unsupported_carrier">We\'re sorry. Your mobile plan does not currently support earning additional data at no charge.</string>
    <string name="carriers">Participating Carriers</string>
    <string name="contact_carrier">Contact your plan provider if not listed here.</string>
    <string name="valid_from_to">Validity date: %1$s to %2$s</string>
    <string name="valid_to">%1$s</string>
    <string name="valid_from">Validity date: from %1$s</string>
    <string name="valid_unlimited"> </string>
    <string name="sponsorship_activated_1">You are currently using your earned mobile data.</string>
    <string name="sponsorship_unactivated_1">You are not currently using your earned mobile data.</string>
    <string name="sponsorship_default_1">Checking the status of your earned mobile data.</string>
    <string name="sponsorship_activated_2">Your mobile data plan is not currently being charge. Isn\'t that awesome?</string>
    <string name="sponsorship_unactivated_2">Your mobile data plan is currently being charge. It\'s time to redeem more!</string>
    <string name="sponsorship_default_2"> </string>
    <string name="default_available_data">0 MB</string>
    <string name="redeeming_amount">Press to apply %s</string>

</resources>
