<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_create_account_unsupported"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/data_redemption_app_bg_final_1080x1920_v2">

    <ImageView
        app:srcCompat="@drawable/face_sad"
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:text="@string/unsupported_carrier"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:id="@+id/textView9"
        android:layout_below="@+id/imageView4"/>

    <TextView
        android:text="@string/carriers"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"/>

    <Spinner
        android:background="@drawable/text_field"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/carriers"
        android:layout_below="@+id/textView10" />

    <TextView
        android:text="@string/contact_carrier"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:id="@+id/textView11"
        android:layout_below="@+id/carriers"/>

</LinearLayout>